Fix letter spacing on group names

--- a/assets/stylesheets/_components/_group-page.scss
+++ b/assets/stylesheets/_components/_group-page.scss
@@ -129,6 +129,7 @@
   @extend %sans;
   font-size: 1rem;
   font-weight: 600;
+  letter-spacing: -.6px;
   margin-top: 0;
 }
 
